--- a/About.html
+++ b/About.html
@@ -56,9 +56,48 @@
     <section id="about-app" class="section-p1">
         <h1>Download Our <a href="#">App</a></h1>
         <div class="video">
-            <video src=""></video>
+            <video autoplay muted loop src=""></video>
         </div>
     </section>
+
+    <section id="feature" class="section.p1">
+        <div class="fe-box"> 
+            <img src="shipping.png" alt="" height="100px" width="120px">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box"> 
+            <img src="online order.png" alt="" height="100px" width="120px">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box"> 
+            <img src="money.png" alt="" height="100px" width="90px">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box"> 
+            <img src="promotion.png" alt="" height="100px" width="120px">
+            <h6>Promotion</h6>
+        </div>
+        <div class="fe-box"> 
+            <img src="happy sell.png" alt="" height="100px" width="120px">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box"> 
+            <img src="service 24hr.png" alt="" height="100px" width="120px">
+            <h6>Service 24/7</h6>
+        </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up For Newsletters</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="your emil address">
+            <button class="normal">sign up</button>
+        </div>
+    </section>
+    
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="shopping logo.png" alt="" height="100" width="100">
