--- a/sproduct.html
+++ b/sproduct.html
@@ -14,7 +14,7 @@
             <ul id="navbar">
                 <li><a href="ecommerce.html">HOME</a></li>
                 <li><a class="active" href="Shop.html">shop</a></li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Concat.html">Contact</a></li>
                 <li id="ref="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> 
