--- a/ecommerce.html
+++ b/ecommerce.html
@@ -16,7 +16,7 @@
                 <li><a href="Shop.html">shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="Concat.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li id="ref="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> 
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
