--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
         <div>
             <ul id="navbar">
                 <li><a href="ecommerce.html">HOME</a></li>
-                <li><a href="Shop.html">shop</a></li>
-                <li><a  href="blog.html">Blog</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
+                <li><a href="Shop.html">SHOP</a></li>
+                <li><a  href="blog.html">BLOG</a></li>
+                <li><a href="About.html">ABOUT</a></li>
+                <li><a class="active" href="contact.html">CONTACT</a></li>
                 <li id="lg.bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> 
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
